--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   ],
   "type": "module",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   },
@@ -38,7 +38,7 @@
     "prepublishOnly": "bun run build"
   },
   "dependencies": {
-    "apply-multi-diff": "^0.1.0",
+    "apply-multi-diff": "0.1.3",
     "js-yaml": "^4.1.0",
     "zod": "^3.25.67"
   },
